# self-healing-mlops-bot

./: .env.example  ARCHITECTURE.md  AUTONOMOUS_EXECUTION_DEMO.py  AUTONOMOUS_SDLC_FINAL_REPORT.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_SUMMARY.md  Dockerfile  Dockerfile.prod  README.md  TERRAGON_FINAL_DEPLOYMENT.py  TERRAGON_FINAL_RESULTS.json  TERRAGON_SDLC_SUMMARY.md  WEB_SERVER_IMPLEMENTATION.md  autonomous_production_deployment.py  autonomous_quality_gates.py  autonomous_quality_validation.py  autonomous_research_enhancement.py  autonomous_research_results.json  demo_final_autonomous_sdlc.py  demo_generation_1.py  demo_generation_2.py  demo_generation_3.py  demonstrate_generation_2.py  deploy.sh  deployment_report.json  docker-compose.prod.yml  docker-compose.yml  enterprise_scale_optimization.py  enterprise_scaling_results.json  generation_1_demo.py  generation_2_robust.py  generation_2_simplified.py  generation_3_scale.py  global_autonomous_features.py  global_deployment_orchestrator.py  global_deployment_results.json  global_features.py  nginx.conf  (+13 more)
.github/workflows/: ci-cd.yml
deploy/: production_deployment.py
docs/: API.md  DEPLOYMENT.md
examples/: advanced_patterns.py  basic_usage.py
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  pdb.yaml  secrets.yaml  service.yaml
kubernetes/production/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  monitoring.yaml  namespace.yaml  rbac.yaml  secrets.yaml  services.yaml  statefulset.yaml
monitoring/: alert_rules.yml  prometheus.yml
scripts/: deploy.sh  init-db.sql  verify_deployment.sh
self_healing_bot/: __init__.py  cli.py  cli_extended.py  server.py
self_healing_bot/actions/: __init__.py  base.py  code_fixes.py  config_updates.py  intelligent_repairs.py  notifications.py  resource_scaling.py  retraining.py  rollback.py  security_patching.py
self_healing_bot/core/: __init__.py  advanced_analytics.py  autonomous_orchestrator.py  bot.py  bot_enhanced.py  config.py  context.py  error_handler.py  errors.py  playbook.py  quantum_intelligence.py
self_healing_bot/detectors/: __init__.py  base.py  data_drift.py  dependency_conflict.py  infrastructure_health.py  model_degradation.py  pipeline_failure.py  registry.py  resource_constraint.py  security_vulnerability.py
self_healing_bot/integrations/: __init__.py  github.py
self_healing_bot/monitoring/: health.py  logging.py  metrics.py
self_healing_bot/performance/: auto_scaling.py  auto_scaling_enhanced.py  cache_monitor.py  caching.py  caching_enhanced.py  caching_enterprise.py  concurrency.py  concurrency_enhanced.py  database_optimization.py  memory_management.py  optimization.py  profiler.py  quantum_optimization.py  reliability.py
tests/: __init__.py  conftest.py  test_bot.py  test_detectors.py  test_integrations.py  test_performance.py  test_playbook.py  test_security.py
(+27 files in other folders)
